# ai-test-generator

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
