[project]
name = "test-generator-backend"
version = "1.0.0"
description = "AI Test Generator - FastAPI Backend"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "huggingface-hub>=0.27.0",
    "openai>=1.0.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "selenium>=4.41.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = false
